--- a/rhenn/layouts/_default/list.html
+++ b/rhenn/layouts/_default/list.html
@@ -1,10 +1,9 @@
 {{ define "main" }}
-
+{{ .Content }}
 {{ range .Pages.ByPublishDate.Reverse }}
 <p>
     <a class="font-125" href="{{ .RelPermalink }}">{{ .Title }}</a>
     <br>
 </p>
   {{ end }}
-  <p>This is an index template for (presumably) all content types</p>
   {{ end }}
