--- a/rhenn/layouts/reviews/list.html
+++ b/rhenn/layouts/reviews/list.html
@@ -4,6 +4,7 @@
     <li>Most of these books are SFF; there should (hopefully) be a tag system in future to reflect this</li>
     <li>The reviews are based on writing quality, but <i>also</i> my enjoyment</li>
     <li>The given star rating is somewhat arbitrary. Anything >=3 stars, I enjoyed.</li>
+    <li>I am <i>incredibly bad</i> at giving plot synopses. Apologies in advance!</li>
 </ul>
 <hr>
 
