--- a/rhenn/static/css/main.css
+++ b/rhenn/static/css/main.css
@@ -108,10 +108,14 @@ img {
 
 #left-panel {
     position: relative;
+    padding-bottom: 100px;
 }
 
 #panel-img {
     max-width: 100%;
+    width: 100%;
     position: absolute;
-    bottom: 0;
+    /* top: 20px; */
+     bottom: 0;
+    
 }
