--- a/rhenn/layouts/partials/footer.html
+++ b/rhenn/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer>
     Site created using <a href="https://gohugo.io">Hugo</a>. Background images are paintings by <a href="https://en.wikipedia.org/wiki/J._C._Leyendecker">
-        J.C.Leyendecker.</a>
+        J.C.Leyendecker.</a> | <a href="/index.xml">RSS</a>
 </footer>
