--- a/rhenn/layouts/partials/left-panel.html
+++ b/rhenn/layouts/partials/left-panel.html
@@ -1,3 +1,4 @@
-<p>Banner coming soon!</p>
+<img alt="ateliweird banner" src="/img/aw_88x31.png">
+<br>
 
 <img id="panel-img" src="/img/littleguy.png">
